# AIprojects

./: .env.example  .gitignore  FIXES.md  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 001_create_users.sql
backend/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  memory_store.rs  models.rs  redis_client.rs  utils.rs
backend/src/routes/: user.rs
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/routes/: Login.tsx  Register.tsx  Users.tsx
scripts/: deploy.sh
tokio-notes/scripts/: concurrent-processing.txt  network-communications.txt  timed-task.txt  webserver.txt
